--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <!-- this is to include animate css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="container">
+      <nav>
+        <ul class="main-nav">
+          <li><a href="">Home</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">About</a></li>
+          <li class="push"><a href="">Contact</a></li>
+        </ul>
+      </nav>
       <div class="buffer-top"></div>
       <div class="row d-flex align-items-center h-100">
         <header class="text-center col-12">
@@ -25,9 +33,9 @@
           <div class="buffer col-12"></div>
           <a class="btn btn-primary subs" href="https://mailchi.mp/80ea338ad691/project-2"
           role="button">Subscribe</a>
+          <div class="buffer col-12"></div>
         </section>
       </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
