--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-      <nav>
-        <ul class="main-nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Products</a></li>
-          <li><a href="">About</a></li>
-          <li class="push"><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="buffer-top"></div>
-      <div class="row d-flex align-items-center h-100">
-        <header class="text-center col-12">
-          <h1><strong>goblin</strong></h1>
-        </header>
-        <div class="buffer col-12"></div>
-        <section class="text-center col-12">
-          <div class="words">This is my project. Big event coming up!</div>
+    <div class="all">
+        <nav>
+          <ul class="main-nav">
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">About</a></li>
+            <li class="push"><a href="">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="buffer-top"></div>
+        <div class="row d-flex align-items-center h-100">
+          <header class="text-center col-12">
+            <h1><strong>goblin</strong></h1>
+          </header>
           <div class="buffer col-12"></div>
-          <a class="btn btn-primary subs" href="https://mailchi.mp/80ea338ad691/project-2"
-          role="button">Subscribe</a>
-          <div class="buffer col-12"></div>
-        </section>
-      </div>
+          <section class="text-center col-12">
+            <div class="words">This is my project. Big event coming up!</div>
+            <div class="buffer col-12"></div>
+            <a class="btn btn-primary subs" href="https://mailchi.mp/80ea338ad691/project-2"
+            role="button">Subscribe</a>
+            <div class="buffer col-12"></div>
+          </section>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
